# lightning-trading-bot

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: test.yml
src/: config.rs  lib.rs  main.rs
src/futures/: close_all_trades.rs  close_trade.rs  create_trade.rs  get_index_history.rs  get_market.rs  get_ohlcs_history.rs  get_price_history.rs  get_trades.rs  mod.rs  ticker.rs
src/math/: calculate_trade.rs  create_trade_from_signal.rs  get_indicators.rs  get_signals.rs  get_stoploss_takeprofit.rs  get_trade_quantity.rs  init_bot_params.rs  mod.rs  price_indicators.rs  update_data.rs
src/utils/: connect_ws.rs  get_headers.rs  get_signature.rs  get_timestamps.rs  get_user.rs  init_bot_params.rs  log_bot_params.rs  mod.rs  process_signals.rs  set_updated_indicators.rs  update_bot_indicators.rs  update_history_data.rs
tests/: get_signals.rs  get_timestamps.rs  price_indicators.rs
